--- a/testdemo/Dockerfile
+++ b/testdemo/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8-oracle
+FROM fabric8/java-alpine-openjdk8-jdk
 COPY target/testdemo-0.0.1-SNAPSHOT.jar .
 EXPOSE 5000
 CMD ["java","-jar","testdemo-0.0.1-SNAPSHOT.jar"]
